# update_notifier

./: pyproject.toml
src/: update_notifier.py
tests/: test_update_notifier.py
